--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
     --main-color: #669966;
+    --link-color: #406E96;
 }
 
 body {
@@ -7,12 +8,12 @@ body {
 }
 
 a {
-    color: var(--main-color);
+    color: var(--link-color);
     text-decoration: none;
 }
 
 a:hover {
-    border-bottom: 1px var(--main-color) dotted;
+    text-decoration: underline;
 }
 
 h1 {
