--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,16 @@ li {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.award-table {
+    margin-top: 10px;
+    width: 100%;
+}
+
+.award-table td:nth-child(1) { 
+    text-align: left; 
+}
+
+.award-table td:nth-child(2) { 
+    text-align: right; 
+}
